--- a/lab-4/D4C.html
+++ b/lab-4/D4C.html
@@ -15,28 +15,29 @@
 		</section>
 		<section id="canvas_main">
 			<main>
-				<a-dot v-for="i in row*row" 
+				<a-dot v-for="i in row*row"
 				:style="{
-					'--row':row,
-					'--h':h,
-					'--l':l+'%',
+				'--row':row,
+				'--h':h,
+				'--l':l+'%',
 				}"
 				:data-pick="i == pick"
-				@click="check(i == pick)"></a-dot>
+				@click="check(i == pick)"
+				></a-dot>
 			</main>
 		</section>
 		<section id="canvas_footer">
 			<div>
-				{{score}} คะแนน
+				คะแนน {{score}}
 				<br>
-				stage {{score}}
+				stage {{stage}}
 			</div>
 		</section>
 	</div>
 
 	<script>
 		let picklight = "40%" //เลือกว่ารอบนี้ อันพิเศษจะมีความสว่าง 40%
-		//document.registerElement('a-dot') ให้ vue รู้จัก a-dot
+		//document.registerElement('a-dot') //ให้ vue รู้จัก a-dot
 
 		function rand(start,stop){//สร้างฟังก์ชัน random ไว้ใช้
 			let shift = (stop-start)+1
@@ -46,47 +47,51 @@
 		let app = new Vue({
 			el:'#canvas',
 			data:{
-				row:3, //จำนวนแถวที่จะมีในรอบนี้
+				row:2, //จำนวนแถวที่จะมีในรอบนี้
 				h:250, // hue ในรอบนี้
-				time:20, //เวลาเริ่มต้น
+				time:30, //เวลาเริ่มต้น
 				score:0, //คะแนนเริ่มต้น
-				pick:6, //หมายเลขวงกลมที่จะสีแตกต่างจากก้อนอื่นๆ
-				l:70,//ความสว่างของสีทั่วไปในรอบนี้
-				maxrow:3,//จำนวนrowที่มากที่สุด
-				minrow:1,//จำนวนrowที่น้อยที่สุด
+				stage:0, //ด่าน
+				pick:2, //หมายเลขวงกลมที่จะสีแตกต่างจากก้อนอื่นๆ
+				l:60,//ความสว่างของสีทั่วไปในรอบนี้
+				maxrow:5,//จำนวนrowที่มากที่สุด
+				minrow:2,//จำนวนrowที่น้อยที่สุด
 			},
 			methods: {
 				check: function(e){
-					if (this.time>0) {//นับเวลาหมด
+					if (this.time>0) {//เช็คเวลา
 						if (e==true ) {
 							this.correct()
 						}else{
 							this.incorrect()
 						}
 						console.log(e)
-						//พิสูจน์ว่าเวลาหมดจริง
-				}
-		},
-		correct: function(){
-					//next level
-					this.row = rand(this.minrow+this.level,this.maxrow+this.level)
+						//เวลาหมดจริงไหม
+					}
+				},
+				correct: function(){
+					//เข้าด่านต่อไป
+					this.row = rand(this.minrow,this.maxrow)
 					this.pick = rand(1,this.row*this.row)
 					this.h = rand(100,330)
 					this.score++
+					this.stage++
 					if (this.score%5==0 && this.score>0) {
-						this.level++
 					}
 					console.log('Correct!')
 				},
 				incorrect: function(){
 					//เข้าด่านต่อไป
 					this.pick = rand(1,this.row*this.row)
+					this.score--
 					this.time--
 					console.log('Incorrect!')
 				}
 			}
 		})
+		//ทำให้แคนวาสมี --picklight ตามที่กำหนดไว้ข้างบนนี้
 		document.querySelector('#canvas').style.setProperty('--picklight',picklight);
+		//ใช่งานคำสั่งอีกรอบ
 		
 		let counter = setInterval(()=>{
 			if (app.time>0) {
