--- a/lab-5/index.html
+++ b/lab-5/index.html
@@ -10,7 +10,7 @@
 	<div id="canvas">
 		<section id="canvas_header">
 			<div>
-				-- แสดงคะแนน
+			{{score}}คะแนน    {{round}} round
 			</div>
 		</section>
 		<section id="canvas_main" 
@@ -19,22 +19,22 @@
 				<div class="box _path" 
 				v-for="i in 14" 
 				:data-pst="i"></div>
-				<div class="box _toggle" data-pst="10" data-isrightarrow="1"></div>
+				<div class="box _toggle" data-pst="10" data-isrightarrow="isrightarrow"></div>
 
-				<div class="box _fruit"></div>
+				<div class="box _fruit" v-for="f in fruits" :data-pst="f.pst" :data-type="f.type"></div>
 
 				<div class="box _origin"></div>
 				<div class="box _12" data-pst="12"></div>
-				<div class="box _16" data-pst="16"></div>
+				<div class="box _15" data-pst="15"></div>
 				
 			</main>
 		</section>
 		<section id="canvas_footer">
-			<div v-if="play" class="btn" id="toggle">
+			<div v-if="play" class="btn" id="toggle" @click="change()">
 				Toggle
 			</div>
 			<div v-if="!play" class="btn" id="endgame">
-				Ene Game
+				End? Game
 			</div>
 		</section>
 	</div>
@@ -45,23 +45,92 @@
 			return Math.floor(Math.random()*100%shift)+start
 		}
 		
-		let fruitCount = 5
+		let fruitCount = 4
 		let isRightArrow = 1
-		let speed = 1000
 		let app = new Vue({
 			el:'#canvas',
 			data:{
+				isRightArrow: isRightArrow,
+				speed:1000,
 				play:true,
-				time:0,
+				round:0,
 				score:0,
 				fruits:[
-					{id:1,type:13,pst:6,run:true,step:1},
-					{id:2,type:11,pst:3,run:true,step:1},
-					{id:3,type:11,pst:2,run:true,step:1},
-					{id:4,type:13,pst:1,run:true,step:1},
+					{id:1,type:13,pst:2,run:true,step:1},
+					{id:2,type:11,pst:1,run:true,step:1},
 				]
-			}
+			},
+			methods:{
+				change: function(){
+					if(this.isRightArrow==1){
+						this.isRightArrow=0
+					}else{
+						this.isRightArrow=1
+					}
+				},
+
+			},
+			computed:{
+
+			},
+			watch:{
+				round: function(x){
+					for(let f in this.fruits){
+						if(this.fruits[f].pst==10){
+							if(this.isRightArrow==1){
+								this.fruits[f].step=3
+							}else{
+								this.fruits[f].step=1
+							}
+
+						}else{
+							this.fruits[f].step=1
+						}
+						//นับคะแนน
+						if(this.fruits[f].pst == 11 || this.fruits[f].pst == 13){
+							if (this.fruits[f].pst == this.fruits[f].type && this.fruits[f].run) {
+								this.score++;
+							}
+
+							else if(this.fruits[f].pst != this.fruits[f].type && this.fruits[f].run){
+								this.play = false;
+							}
+						}
+						if(this.fruits[f].pst==12||this.fruits[f].pst==14){
+							this.fruits[f].run=false;
+						}
+
+						let run = this.fruits[f].run
+						if(run){
+							this.fruits[f].pst += this.fruits[f].step
+						}
+						console.log()
+					}
+					let spawn = rand(0,2)
+					if(spawn==0){
+						this.fruits.push({id:fruitCount,type:11,pst:1,run:true,step:1})
+
+					}
+					else if(spawn==1){
+						this.fruits.push({id:fruitCount,type:13,pst:1,run:true,step:1})
+					}
+					fruitCount++;
+				}
+
+			},
+
 		})
+		let playing  =setInterval(function(){
+            app.round++
+            if(app.play){
+                app.round++
+            }
+            else{
+                clearInterval(playing)
+            }
+        },app.speed)
+
+			
 	</script>
 </body>
 </html>
