--- a/lab-5/golden-wind.html
+++ b/lab-5/golden-wind.html
@@ -10,27 +10,27 @@
 	<div id="canvas">
 		<section id="canvas_header">
 			<div>
-			{{score}}คะแนน    {{round}} round
+				{{score}}คะแนน    {{round}} round
 			</div>
 		</section>
-		<section id="canvas_main" 
+		<section id="canvas_main"
 		:data-play="play">
 			<main>
-				<div class="box _path" 
-				v-for="i in 14" 
+				<div class="box _path"
+				v-for="i in 14"
 				:data-pst="i"></div>
-				<div class="box _toggle" data-pst="10" data-isrightarrow="isRightarrow"></div>
+				<div class="box _toggle" :data-pst="10" :data-isrightarrow="isRightArrow"></div>
 
 				<div class="box _fruit" v-for="f in fruits" :data-pst="f.pst" :data-type="f.type"></div>
 
 				<div class="box _origin"></div>
 				<div class="box _12" data-pst="12"></div>
-				<div class="box _15" data-pst="15"></div>
-				
+				<div class="box _14" data-pst="14"></div>
+
 			</main>
 		</section>
 		<section id="canvas_footer">
-			<div v-if="play" class="btn" id="toggle" @click="change()">
+			<div v-if="play" class="btn" id="toggle"@click="change()">
 				Toggle
 			</div>
 			<div v-if="!play" class="btn" id="endgame">
@@ -44,20 +44,22 @@
 			let shift = (stop-start)+1
 			return Math.floor(Math.random()*100%shift)+start
 		}
-		
-		let fruitCount = 4
+
+		let fruitCount = 3
 		let isRightArrow = 1
 		let app = new Vue({
 			el:'#canvas',
 			data:{
 				isRightArrow: isRightArrow,
-				speed:1000,
+                speed: 1000,
 				play:true,
 				round:0,
 				score:0,
 				fruits:[
 					{id:1,type:13,pst:2,run:true,step:1},
+					//type 13 is yellow
 					{id:2,type:11,pst:1,run:true,step:1},
+					//type 11 is red
 				]
 			},
 			methods:{
@@ -129,8 +131,6 @@
                 clearInterval(playing)
             }
         },app.speed)
-
-			
 	</script>
 </body>
 </html>
