--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -10,21 +10,67 @@
 	<div id="app">
 		<input type="number" v-model="n">
 		<div class="space"></div>
-		<h3>สูตรคูณเเม่{{number}}</h3>
-		<h4>{{n}} x 1 = {{n*1}}</h4>
-		<h4>{{n}} x 2 = {{n*2}}</h4>
-		<h4>{{n}} x 3 = {{n*3}}</h4>
-		<h4>{{n}} x 4 = {{n*4}}</h4>
-		<h4>{{n}} x 5 = {{n*5}}</h4>
-		<h4>{{n}} x 6 = {{n*6}}</h4>
-		<h4>{{n}} x 7 = {{n*7}}</h4>
-		<h4>{{n}} x 8 = {{n*8}}</h4>
-		<h4>{{n}} x 9 = {{n*9}}</h4>
-		<h4>{{n}} x 10 = {{n*10}}</h4>
-		<h4>{{n}} x 11 = {{n*11}}</h4>
-		<h4>{{n}} x 12 = {{n*12}}</h4>
+		<table class="w3-table w3-striped">
+			<tr>
+				<th>สูตรคูณเเม่ {{n}}</th>
+			</tr>
+			<tr>
+				<th>calulation</th>
+				<th>result</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 1</th>
+				<th>{{n*1}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 2</th>
+				<th>{{n*2}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 3</th>
+				<th>{{n*3}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 4</th>
+				<th>{{n*4}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 5</th>
+				<th>{{n*5}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 6</th>
+				<th>{{n*6}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 7</th>
+				<th>{{n*7}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 8</th>
+				<th>{{n*8}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 9</th>
+				<th>{{n*9}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 10</th>
+				<th>{{n*10}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 11</th>
+				<th>{{n*11}}</th>
+			</tr>
+			<tr>
+				<th>{{n}} x 12</th>
+				<th>{{n*12}}</th>
+			</tr>
+	</table>
 	</div>
-
+	<h5>
+		<img src="img/1.gif" alt="">
+	</h5>
 	<script>
 		let app = new Vue({
 			el: '#app',
