--- a/lab-1/starter/index.html
+++ b/lab-1/starter/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>[61070015] - Multimedia Programming 2563 ITKMITL</title>
+	<title>Lab - Multimedia Programming 2563 ITKMITL</title>
 	<link rel=stylesheet href="../src/reset.css">
 	<link rel=stylesheet href="lab.css">
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -11,6 +11,13 @@
 		
 	</div>
 
-	<script src="index.js"></script>
+	<script>
+		let app = new Vue({
+			el: '#app',
+			data: {
+				message: 'Hello Vue!'
+			}
+		})
+	</script>
 </body>
 </html>
