--- a/lab-2/index.html
+++ b/lab-2/index.html
@@ -8,31 +8,60 @@
 </head>
 <body>
 	<div id="app">
-		
+		About
+		<h3>username {{person.username}}</h3>
+		<h3>name {{person.name}}</h3>
+		<h3>email {{person.email}}</h3>
+		<h3>website {{person.website}}</h3>
+		<h3>company {{person.company.name}}</h3>
+		<button @click="isthisgood">ดีไม่ดี</button>
+		<h2>{{yesno.answer}}</h2>
+		users
+		<h2 v-for="u in users":data-id ="u.id" @click="viewbio(u)">
+		<img src="https://picsum.photos/id/300/200/300" att="">
+		{{u.username}}
+	</h2>
 	</div>
 	
 
 	<script>
 		fetch('https://jsonplaceholder.typicode.com/users')
 		.then(response => response.json())
-		.then(json => {console.log(json)})
+		.then(json => {
+			console.log(json)
+			app.users = json
+			app.person = json[0]})
 		let app = new Vue({
 			el: '#app',
+			methods: {
+				viewbio: function(user){
+					this.person = user
+				},
+				isthisgood: function(){
+					fetch('https://jsonplaceholder.typicode.com/users')
+					.then(response => response.json())
+					.then(json => {
+					console.log(json)
+					app.yesno = json})
+				}
+			},
 			data: {
-				users :[],
-				person:{
-					id:0,
-					name:'..loading',
-					username:'..loading',
-					email:'..loading',
-					website:'..loading',
+				yesno:{
+					"answer":"5",
+					"forced":false,
+					"image":" "
+					},
+				person :{id:61070015,
+					name:"",
+					username:"",
+					email:'',
+					website:"",
 					company:{
-						name : '..loading',
-					}
-				}	
+						name : ''}
+						
+				}
 			}
 		})
-
 	</script>
 </body>
 </html>
