--- a/lab-4/index.html
+++ b/lab-4/index.html
@@ -34,6 +34,8 @@
 			</div>
 		</section>
 	</div>
+	<img src="img/2.png">
+	<source src="sound/big.mp3"></source>
 
 	<script>
 		let picklight = "40%" //เลือกว่ารอบนี้ อันพิเศษจะมีความสว่าง 40%
